update for latest code

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 REACT_APP_ENVIRONMENT = DEVELOPMENT
 GENERATE_SOURCEMAP=false
+
+# // https://api.studio.thegraph.com/query/<ID>/<SUBGRAPH_NAME>/<VERSION>
+# const vortexSubgraphEndpoint = 'https://api.studio.thegraph.com/query/9771/testcommunity/v0.0.8'
+# // https://gateway.thegraph.com/api/<API_KEY>/subgraphs/id/<SUBGRAPH_ID>
